mobile view updated

--- a/assignment1/ass01_project/single_product.html
+++ b/assignment1/ass01_project/single_product.html
@@ -20,14 +20,16 @@
         <nav>
             <div class="nav-container">
                 <div class="nav-left">
-                    <img src="images/logo.png" alt="logo">
-                    <h1>Furniro</h1>
+                    <a href="index.html">
+                        <img src="images/logo.png" alt="logo">
+                        <h1>Furniro</h1>
+                    </a>
                 </div>
                 <div class="nav-middle">
                     <ul>
-                        <li><a href="/">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="shop.html">Shop</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="blog.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -36,7 +38,7 @@
                         <li> <img src="images/menu/profile.png" alt=""> </li>
                         <li> <img src="images/menu/search.png" alt=""> </li>
                         <li> <img src="images/menu/heart.png" alt=""> </li>
-                        <li> <img src="images/menu/cart.png" alt=""> </li>
+                        <li> <a href="cart.html"><img src="images/menu/cart.png" alt=""></a> </li>
                     </ul>
 
                     <i class="fa-solid fa-bars-staggered"></i>
@@ -313,9 +315,9 @@
                                 Links
                             </div>
                             <ul>
-                                <li><a href="/">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="shop.html">Shop</a></li>
-                                <li><a href="about.html">About</a></li>
+                                <li><a href="blog.html">About</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
