--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Assignments of Tamima Yeasmin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
     <nav class="container">
@@ -42,29 +43,29 @@
                             <li>
                                 <span><a href="assignment1/ass01_navbar.html">Q3: Navbar</a></span> 
                                 <span>
-                                    <i class="fa-brands fa-github"></i>
-                                    <i class="fa-solid fa-link"></i>
+                                    <a href="https://github.com/tyeasmino/mern_journey/blob/main/assignment1/ass01_navbar.html" target="_blank"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://tyeasmino.github.io/mern_journey/assignment1/ass01_navbar.html" target="_blank"><i class="fa-solid fa-link"></i></i></a>
                                 </span>
                             </li>
                             <li>
                                 <span> <a href="assignment1/ass01_timeline.html">Q6: Timeline</a></span> 
                                 <span>
-                                    <i class="fa-brands fa-github"></i>
-                                    <i class="fa-solid fa-link"></i>
+                                    <a href="https://github.com/tyeasmino/mern_journey/blob/main/assignment1/ass01_timeline.html" target="_blank"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://tyeasmino.github.io/mern_journey/assignment1/ass01_timeline.html" target="_blank"><i class="fa-solid fa-link"></i></i></a>
                                 </span>
                             </li>
                             <li>
                                 <span><a href="assignment1/ass01_glassEffect.html">Q7: Glass effect</a></span> 
                                 <span>
-                                    <i class="fa-brands fa-github"></i>
-                                    <i class="fa-solid fa-link"></i>
+                                    <a href="https://github.com/tyeasmino/mern_journey/blob/main/assignment1/ass01_glassEffect.html" target="_blank"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://tyeasmino.github.io/mern_journey/assignment1/ass01_glassEffect.html" target="_blank"><i class="fa-solid fa-link"></i></i></a>
                                 </span>
                             </li>
                             <li>
                                 <span><a href="assignment1/ass01_project/index.html">P: Furniro E-Commerce</a></span> 
                                 <span>
-                                    <i class="fa-brands fa-github"></i>
-                                    <i class="fa-solid fa-link"></i>
+                                    <a href="https://github.com/tyeasmino/mern_journey/tree/main/assignment1/ass01_project" target="_blank"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://tyeasmino.github.io/mern_journey/assignment1/ass01_project/index.html" target="_blank"><i class="fa-solid fa-link"></i></i></a>
                                 </span>
                             </li> 
                         </ul>
@@ -74,7 +75,7 @@
                 <div class="assignment-footer">
                     <div>
                         <strong>Status:</strong>
-                        <span>On going</span>
+                        <span class="submitted">Submitted</span>
                     </div>
 
                     <div>
