--- a/assignment1/ass01_project/index.html
+++ b/assignment1/ass01_project/index.html
@@ -456,9 +456,9 @@
                                 Links
                             </div>
                             <ul>
-                                <li><a href="/">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="shop.html">Shop</a></li>
-                                <li><a href="about.html">About</a></li>
+                                <li><a href="blog.html">About</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
